--- a/TwibServer/package.json
+++ b/TwibServer/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@distube/ytdl-core": "^4.14.4",
     "express": "^4.19.2",
     "yt-search": "^2.11.1"
   }
