Add Archiver Package

--- a/TwibServer/package.json
+++ b/TwibServer/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@distube/ytdl-core": "^4.14.4",
+    "archiver": "^7.0.1",
     "express": "^4.19.2",
     "yt-search": "^2.11.1"
   }
