--- a/Twib-Music-Info.plist
+++ b/Twib-Music-Info.plist
@@ -17,5 +17,9 @@
 	<array>
 		<string>spotify</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 </dict>
 </plist>
